# datain

./: .env.dev  .gitignore  README.md  pyproject.toml
datain/: __init__.py  cliente.py  server.py
datain/stream/: stream.py
datain/webServer/: auth.py  control.py  html.py  output.py  status.py  subscribe.py
datain/webServer/html/: client.html  graf.html
datain/webServer/models/control/: startResponse.py
datain/webServer/models/request/: subscribe.py  unsubscribe.py
datain/webServer/models/response/: auth.py  status.py  subscribe.py  unsubscribe.py
datain/webServer/static/: test.graf.html
datain/webServer/static/js/: graf.js
datain/webServer/static/test/: dataklines-copy.json  dataklines.json
datain/webServer/static/vendors/echarts/: echarts.min.js
datain/webServer/utils/: BaseResponseModel.py  BaseWebServer.py  authUtils.py
datain/wsOutput/: ws.py  wsControl.py  wsManager.py
datain/wsOutput/utils/: actionSubscribe.py  response.py
tests/: 2WsTest.py  test_auth.py  test_client.py
